--- a/scss/components/_svg.scss
+++ b/scss/components/_svg.scss
@@ -19,8 +19,8 @@ svg {
     width: 65px; 
     height: 65px;
     border-radius: 50%;
-    position: relative;
-    margin: auto;
+    position: relative;    
+    margin: auto auto 40px auto;    
 }
 
 .social-card div svg {
