--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -9,6 +9,7 @@ $color-secondary: rgb(76, 60, 115);
 
 .top-nav h1 {
     margin-right: auto;
+    margin-left: 30px;
 }
 
 .top-nav :not(:first-child) {
@@ -29,11 +30,15 @@ $color-secondary: rgb(76, 60, 115);
 
 // Side nav
 
+.side-nav,
+.scroll-bar {
+    background-color: $color-secondary;
+}
+
 .side-nav {
     min-height: 83px;
     display: flex;
     justify-content: space-around;
-    background-color: $color-secondary;
 }
 
 .side-nav svg {
@@ -101,6 +106,32 @@ $color-secondary: rgb(76, 60, 115);
 }
 
 // graphs
+
+.traffic-bar {
+    display: flex;
+    justify-content: space-between;
+}
+
+li {
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 15px;
+    margin-bottom: 20px;
+}
+
+li:hover {
+    background-color: rgba(112, 102, 179, 0.4);    
+}
+
+.selected {
+    background-color: rgba(67, 187, 87, 0.4);  
+}
+
+h3,
+ul {
+    margin-bottom: 30px;
+}
+
 .line-chart-container {
     width: 95%;    
     margin-left: 2.5%;
@@ -109,6 +140,19 @@ $color-secondary: rgb(76, 60, 115);
 
 .line-chart-container ul li{
     display: inline;
+}
+
+#lineChart,
+#barChart,
+#doughnutChart {
+    margin-bottom: 30px;
+}
+
+.bar-chart-container,
+.pie-chart-container,
+.social-chart-container,
+.card {
+    border-top: rgba(0, 0, 0, 0.2) solid 1px;
 }
 
 #lineChart {    
@@ -146,6 +190,11 @@ $color-secondary: rgb(76, 60, 115);
 }
 
 //Social cards
+.social-chart-container,
+.card {
+    padding-bottom: 30px;
+}
+
 .social-chart-container {
     max-width: 95%;
     margin: auto;
@@ -155,7 +204,6 @@ $color-secondary: rgb(76, 60, 115);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;   
-    max-width: 95%; 
     margin: auto;
 }
 
@@ -163,15 +211,28 @@ $color-secondary: rgb(76, 60, 115);
     border: rgba(0, 0, 0, 0.15) solid 1px;
     background-color: rgba(0, 0, 0, 0.05);
     flex-grow: 1;
-    flex-basis: 200px;
-    margin: 20px 20px;
-    height: 120px;    
+    flex-basis: 250px;
+    margin: 20px 15px;
+    height: 120px;   
+    border-radius: 5px; 
+}
+
+.social-card h2 {
+    margin-bottom: 0;
+}
+
+.social-card p {
+    margin-top: 0;
 }
 
 //users cards
 .card {
     max-width: 95%;
     margin: auto;
+}
+
+.user-container .user:not(:first-child) {
+    border-top: solid 1px rgba(0, 0, 0, 0.2);
 }
 
 .user p:nth-child(2) {
@@ -196,13 +257,14 @@ $color-secondary: rgb(76, 60, 115);
 
 .card input,
 textarea {
-    width: 95%;
+    width: 98%;
     margin: auto;
     background-color: rgba(0, 0, 0, 0.05);
     border: rgba(0, 0, 0, 0.15) solid 1px;
     border-radius: 5px;
     padding: 15px;
     margin-bottom: 25px;
+    padding-right: 0;
 }
 
 button {
@@ -214,12 +276,18 @@ button {
 
 #send-button {
     background-color: $color-primary;
-    width: 102%;    
+    width: 100%;    
     margin: auto;    
 }
 
 .button-container {
-    display: inline-block;
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+.settings {
+    display: grid;
+    grid-template-rows: repeat(5, 1fr);
 }
 
 .settings p {
@@ -231,6 +299,9 @@ button {
     border-radius: 20px;   
     width: 90px; 
     border: lightgray solid 2px;
+    height: 32px;
+    margin-top: 5px;
+    margin-left: 20px;
 }
 
 .on-button p {
@@ -239,17 +310,29 @@ button {
 }
 
 .on-button div {
-    width: 16px;
-    height: 16px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
     background-color: white;
-    margin: 7px 8px 8px 0;
+    margin: 4px 6px 8px 0;
     border: lightgray solid 2px;
+}
+
+select {
+    width: 100%;
+    margin: auto;
+    background-color: rgba(0, 0, 0, 0.05);
+    border: rgba(0, 0, 0, 0.15) solid 1px;
+    border-radius: 5px;
+    padding: 15px;
+    margin-bottom: 35.5px;
+    // margin-top: 25px;
 }
 
 #final-buttons {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 30px;
 }
 
 #save-button {
@@ -261,6 +344,67 @@ button {
 #cancel-button {
     background-color: gray;
     width: 47%;
+    opacity: .7;
 }
 
-/////Change settings card layout to grid and fix buttons!!! 
+//Media queries
+
+//tablets
+@media (min-width: 768px) {
+    main {
+        display: grid;
+        grid-template-columns: 1fr 10fr;
+    }    
+    .side-nav {
+        flex-direction: column;
+        justify-content: flex-start;
+        max-width: 100px;   
+        position: sticky;
+        top: 20px; 
+    }
+    .side-nav svg {
+        padding-top: 20px;
+        margin: 25px auto;        
+        padding: 0 25px;
+    }
+}
+
+//desktop
+@media (min-width: 1024px) {
+    .main-content {
+        display: grid;
+        // max-width: 1400px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(auto-fit,1fr);  
+        max-width: 100%;     
+        margin-left: auto; 
+        margin-right: auto;
+    }
+    .main-content {
+        margin: 0;
+    }
+    .search-bar {
+        grid-column: 1/3;
+    }
+    .alert-message {
+        grid-column: 1/3;
+        width: 100%;
+    }
+    .line-chart-container {
+        grid-column: 1/3;
+    }
+    .bar-chart-container {
+        grid-column: 1/2;
+    }
+    .pie-chart-container {
+        grid-column: 2/3;
+    }
+    .social-chart-container {
+        grid-column: 1/3;
+        width: 100%;
+    }
+    .card {
+        margin: 0;
+        padding-left: 20px;
+    }
+}
