--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -22,10 +22,46 @@ $color-secondary: rgb(76, 60, 115);
     padding-left: 1%;
 }
 
-.top-nav svg {
-    padding-right: 2%;
+.dropdown {
     margin-right: 2%;
     border-right: solid rgba(76, 60, 115, 0.5) 1px;
+    position: relative;
+}
+
+.drop-options {
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.8);
+    border: $color-primary solid 1px;
+    border-radius: 5px;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);   
+    transition: opacity .2s ease-in;
+}
+
+.drop-hide {
+    opacity: 0;
+    z-index: -1; 
+}
+
+.drop-show {
+    opacity: 1;
+    z-index: 1;
+}
+
+.drop-options p {
+    color: rgba(0,0,0,.8);
+    padding: 12px 16px;
+    display: block;
+    transition: background-color .2s ease-in;
+}
+
+.drop-options p:hover {
+    background-color: $color-primary;   
+    color: white; 
+}
+
+.dropdown svg {
+    padding-right: 2%;    
 }
 
 // Side nav
@@ -66,6 +102,8 @@ $color-secondary: rgb(76, 60, 115);
 }
 
 .search-bar-box input {
+    font-size: .9em;
+    padding-left: 10px;
     min-width: 45%;
     min-height: 50%;
     margin: auto 5% auto 50%;
@@ -103,7 +141,13 @@ $color-secondary: rgb(76, 60, 115);
     margin-left: auto;   
     margin-right: 2%;
     filter: invert(1);
+    opacity: .6;
 }
+
+#close:hover {
+    opacity: 1;
+}
+
 
 // graphs
 
@@ -252,8 +296,76 @@ ul {
 .recent-activity p:last-child {
     margin-top: 0;
 }
+//autocomplete area 
+
+.autocomplete {
+    position: relative;
+    display: inline-block;
+    width: 98%;
+  }
+
+  #searchUser {
+    margin-bottom: 0px;
+  }
+
+  #searchUser[type=text] {
+    background-color: #f1f1f1;
+    width: 100%;
+  }
+
+  .autocomplete-items {
+    position: absolute;
+    border: 1px solid #d4d4d4;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;    
+    top: 100%;
+    left: 0;
+    right: 0;
+    color: rgba(0, 0, 0, 0.6);
+  }
+
+  .autocomplete-items div {
+    padding: 10px;
+    cursor: pointer;
+    background-color: #fff;
+    border-bottom: 1px solid #d4d4d4;
+  }
+
+  .autocomplete-items div:hover {    
+    background-color: #e9e9e9;
+  }
 
 //Message user and settings
+
+.message-card {
+    position: relative;
+}
+
+.message-one,
+.message-two {
+    position: absolute;
+    z-index: 1;
+    border: $color-primary solid 1px;
+    border-radius: 5px;
+    left: 50%;
+    top: 50%;
+    margin: auto;
+    text-align: center;  
+    padding: 20px;  
+    background-color: $color-secondary;
+    color: white;
+    margin-top: -35px;
+    opacity: 0;
+}
+
+.message-one {
+    margin-left: -120.5px;
+}
+
+.message-two {
+    margin-left: -62.5px;
+}
 
 .card input,
 textarea {
@@ -265,6 +377,11 @@ textarea {
     padding: 15px;
     margin-bottom: 25px;
     padding-right: 0;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+textarea {
+    margin-top: 25px;
 }
 
 button {
@@ -293,15 +410,24 @@ button {
 .settings p {
     display: inline-block;
 }
-.on-button {
-    background-color: $color-primary;
+.on-button {    
     display: flex;
     border-radius: 20px;   
     width: 90px; 
-    border: lightgray solid 2px;
     height: 32px;
     margin-top: 5px;
     margin-left: 20px;
+}
+
+.onClass {
+    background-color: $color-primary;
+    border: lightgray solid 2px;
+}
+
+.offClass {
+    background-color: rgba(0, 0, 0, 0.2);
+    color: black;
+    border: rgba(0, 0, 0, 0.507) solid 2px;
 }
 
 .on-button p {
@@ -309,13 +435,20 @@ button {
     margin: 8px auto 8px 8px;
 }
 
-.on-button div {
+.btn-div {
     width: 20px;
     height: 20px;
     border-radius: 50%;
     background-color: white;
     margin: 4px 6px 8px 0;
+}
+
+.div-on {
     border: lightgray solid 2px;
+}
+
+.div-off {
+    border: rgba(0, 0, 0, 0.507) solid 2px;
 }
 
 select {
@@ -326,7 +459,7 @@ select {
     border-radius: 5px;
     padding: 15px;
     margin-bottom: 35.5px;
-    // margin-top: 25px;
+    color: rgba(0, 0, 0, 0.6);  
 }
 
 #final-buttons {
@@ -353,12 +486,12 @@ select {
 @media (min-width: 768px) {
     main {
         display: grid;
-        grid-template-columns: 1fr 10fr;
+        grid-template-columns: 100px 1fr;
     }    
     .side-nav {
         flex-direction: column;
         justify-content: flex-start;
-        max-width: 100px;   
+        max-width: 80px;   
         position: sticky;
         top: 20px; 
     }
@@ -372,8 +505,7 @@ select {
 //desktop
 @media (min-width: 1024px) {
     .main-content {
-        display: grid;
-        // max-width: 1400px;
+        display: grid;        
         grid-template-columns: 1fr 1fr;
         grid-template-rows: repeat(auto-fit,1fr);  
         max-width: 100%;     
@@ -408,3 +540,25 @@ select {
         padding-left: 20px;
     }
 }
+
+//Animations
+
+    //message animations 
+
+    @keyframes showMessage {
+        20% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+        }
+    }
+
+    @keyframes showMessageAgain {
+        20% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+        }
+    }
